--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -1,3 +1,3 @@
-<div class="container-fluid text-light text-center bg-danger">
-<p>Copyright Forum-app 2021 | All rights reserved</p>
+<div id="footer" class="container-fluid text-light text-center bg-danger">
+    <p>Copyright Forum-app 2021 | All rights reserved</p>
 </div>
