--- a/partials/_loginModal.html
+++ b/partials/_loginModal.html
@@ -1,10 +1,8 @@
-<?php
-echo '<!-- Button trigger modal -->
+<!-- Button trigger modal -->
 
 
 <!-- Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -13,21 +11,20 @@ echo '<!-- Button trigger modal -->
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form>
-            <div class="modal-body">
+            <form method="post" action="/Forum-app/index.php">
+                <div class="modal-body">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email">
+                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">We will never share your email with anyone
                             else.</small>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" name="password" class="form-control">
                     </div>
                     <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <input name="password" type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Remember me</label>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
@@ -35,5 +32,4 @@ echo '<!-- Button trigger modal -->
             </form>
         </div>
     </div>
-</div>';
-?>
+</div>
