--- a/partials/_loginModal.html
+++ b/partials/_loginModal.html
@@ -14,14 +14,12 @@
             <form method="post" action="/Forum-app/index.php">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input name="emailL" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We will never share your email with anyone
-                            else.</small>
+                        <label for="exampleInputEmail1">Username</label>
+                        <input name="nameL" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
-                        <input type="password" name="password" class="form-control">
+                        <input type="password" name="passwordL" class="form-control">
                     </div>
                     <div class="form-group form-check">
                         <input name="password" type="checkbox" class="form-check-input" id="exampleCheck1">
