--- a/partials/_footer.html
+++ b/partials/_footer.html
@@ -1,3 +1,3 @@
-<footer id="footer" class="container-fluid text-light text-center bg-danger">
+<div id="footer" class="container-fluid text-light text-center">
     <p>Copyright Forum-app 2021 | All rights reserved</p>
-</footer>
+</div>
